# toml-maid

./: .ignore  Cargo.toml  README.md  toml-maid.toml  toms-maid.toml
src/: lib.rs  main.rs
tests/: output_consistency.rs
tests/output_consistency/: exemple.toml  exemple.toml.out
