[package]
name = "toml-maid"
version = "0.3.0"
authors = [ "nanocryk" ]
description = "Keep your TOML files clean"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/nanocryk/toml-maid"

[dependencies]
# Config loading
glob = "0.3"
ignore = "0.4"
serde = { version = "1.0.130", features = [ "derive" ] }
toml = "0.5.8" # Parse `toml-maid.toml` file

# CLI stuff
colored = "2.0.0"
structopt = "0.3.25"

# TOML handling
toml_edit = "0.9.1" # Edit TOML files

# Running `cargo run -- ./Cargo.toml --check` should succeed.
